<resources>
    <string name="app_name">Lister</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_button_register">Register</string>
    <string name="text_login">Already have an account?</string>
    <string name="label_button_secondary_login">Login now</string>
    <string name="placeholder_email">johndoe@email.com</string>
    <string name="placeholder_password">Input password</string>
    <string name="label_button_login">Login</string>
    <string name="text_register">Don\'t have any account?</string>
    <string name="label_button_secondary_register">Register now</string>
    <string name="label_button_forgot_password">Forgot password?</string>
    <string name="title_email_verification">Email Verification</string>
    <string name="text_email_verify_1">A verification email has been sent to your email.</string>
    <string name="text_email_verify_2">Please verify your email by click the link.</string>
    <string name="label_button_email_verify">I have verified my email</string>
    <string name="label_name">Name</string>
    <string name="placeholder_name">John Doe</string>
    <string name="label_button_update">Update</string>
    <string name="label_button_logout">Logout</string>
    <string name="value_task_title">My first task</string>
    <string name="value_task_deadline">Sun, Oct 10th, 10.00 AM</string>
    <string name="desc_btn_edit">Edit this task</string>
    <string name="desc_btn_delete">Delete this task</string>
    <string name="desc_btn_add">Add task</string>
    <string name="placeholder_description">Do anything…</string>
    <string name="placeholder_title">My Task</string>
    <string name="label_button_add_task">Add Task</string>
    <string name="label_description">Description</string>
    <string name="label_deadline">Deadline</string>
    <string name="label_title">Title</string>
    <string name="label_button_edit_task">Edit Task</string>
    <string name="placeholder_deadline">dd/MM/yyyy HH:mm</string>
    <string name="label_button_share">Share</string>
    <string name="label_share_task">Share to :</string>
    <string name="label_write_access">Write Access</string>
    <string name="label_delete_access">Delete Access</string>
    <string name="label_lister_logo">Lister Logo</string>
    <string name="label_button_send">Send Request</string>
    <string name="label_button_sending">Sending…</string>
    <string name="label_shared_to">Shared To</string>
    <string name="value_count_shared_task">null person</string>
    <string name="label_button_see_all">See all</string>
    <string name="desc_img_read_access">Can Read</string>
    <string name="desc_img_write_access">Can Write</string>
    <string name="desc_img_delete_access">Can Delete</string>
    <string name="label_button_remove_access">Remove Access</string>
    <string name="text_empty_shared">This task has not been shared to anyone.</string>
    <string name="helper_write_access">If enabled, the recipient can edit your task.</string>
    <string name="helper_delete_access">If enabled, the recipient can delete your task.</string>
    <string name="text_empty_tasks">You don\'t have any task now.</string>
    <string name="label_button_edit">Edit</string>
    <string name="label_button_delete">Delete</string>
</resources>
