<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/shareItem"
        android:icon="@drawable/ic_share_24"
        android:title="@string/label_button_share"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/editItem"
        android:icon="@drawable/ic_edit_24"
        android:title="@string/label_button_edit"
        android:visible="false"
        app:showAsAction="collapseActionView"
        />

    <item
        android:id="@+id/deleteItem"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/label_button_delete"
        android:visible="false"
        app:showAsAction="collapseActionView"
        />
</menu>
