<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditTaskActivity"
    >

    <!-- Title Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleField"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:textColorHint="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderText="@string/placeholder_title"
        >

        <!-- Input Title -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_title"
            android:inputType="text"
            android:minHeight="48dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Description Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionField"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/titleField"
        app:placeholderText="@string/placeholder_description"
        >

        <!-- Input Description -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_description"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Deadline Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/deadlineField"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/descriptionField"
        app:placeholderText="@string/placeholder_deadline"
        >

        <!-- Input Deadline -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputDeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_deadline"
            android:inputType="datetime"
            android:minHeight="48dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Edit Task Button -->
    <Button
        android:id="@+id/btnEditTask"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_button_edit_task"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deadlineField"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
