<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UpdateProfileActivity"
    >

    <!-- Name Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameField"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="?attr/colorPrimary"
        app:helperText="Set display name."
        app:helperTextEnabled="true"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderText="@string/placeholder_name"
        >

        <!-- Input Name -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/label_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Next Button -->
    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_button_update"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameField"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
