<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ShareTaskActivity"
    >

    <!-- Email Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailField"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="?attr/colorPrimary"
        app:helperText="Input the recipient's email."
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderText="@string/placeholder_email"
        >

        <!-- Input Email -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/label_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input Writable -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/writableField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField"
        >

        <TextView
            android:id="@+id/labelWritable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:text="@string/label_write_access"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/helperWritable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            />

        <TextView
            android:id="@+id/helperWritable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:text="@string/helper_write_access"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelWritable"
            app:layout_constraintVertical_bias="0"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchWritable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="DuplicateSpeakableTextCheck"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Input Deletable -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deletableField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/writableField"
        >

        <TextView
            android:id="@+id/labelDeletable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:text="@string/label_delete_access"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/helperDeletable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <TextView
            android:id="@+id/helperDeletable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:text="@string/helper_delete_access"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelDeletable"
            app:layout_constraintVertical_bias="0"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchDeletable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_button_share"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/deletableField"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
